# docs/swagger.json
@@ -15,7 +15,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "54.250.169.163",
     "basePath": "/api",
     "paths": {
         "/api/auth/login": {
@@ -86,7 +86,7 @@
                 }
             }
         },
-        "/api/user": {
+        "/api/profile": {
             "get": {
                 "security": [
                     {
@@ -98,14 +98,50 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "profile"
                 ],
-                "summary": "user",
+                "summary": "profile",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.User"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/user": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "get all users by search term",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "users",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Search Term",
+                        "name": "term",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.User"
+                            }
                         }
                     }
                 }
